--- a/src/app/private/calendar/calendar.component.html
+++ b/src/app/private/calendar/calendar.component.html
@@ -3,43 +3,43 @@
     #calendar
     [options]="calendarOptions"
   ></full-calendar>
-<!-- Legend -->
-<div
-  class="flex flex-wrap gap-4 justify-content-center mt-3 text-xs font-medium text-600"
->
-  <div class="flex align-items-center gap-2">
-    <div
-      class="w-1rem h-1rem border-round shadow-1"
-      style="background-color: #22c55e"
-    ></div>
-    <span>Activa</span>
+  <!-- Legend -->
+  <div
+    class="flex flex-wrap gap-4 justify-content-center mt-3 text-xs font-medium text-600"
+  >
+    <div class="flex align-items-center gap-2">
+      <div class="flex align-items-center gap-2">
+        <div
+          class="w-1rem h-1rem border-round shadow-1"
+          style="background-color: #facc15"
+        ></div>
+        <span>Planeada</span>
+      </div>
+      <div
+        class="w-1rem h-1rem border-round shadow-1"
+        style="background-color: #22c55e"
+      ></div>
+      <span>Preparada</span>
+    </div>
+    <div class="flex align-items-center gap-2">
+      <div
+        class="w-1rem h-1rem border-round shadow-1"
+        style="background-color: #b1b1b1ff"
+      ></div>
+      <span>Finalizada</span>
+    </div>
+    <div class="flex align-items-center gap-2">
+      <div
+        class="w-1rem h-1rem border-round shadow-1"
+        style="background-color: #ef4444"
+      ></div>
+      <span>Cancelada</span>
+    </div>
   </div>
-  <div class="flex align-items-center gap-2">
-    <div
-      class="w-1rem h-1rem border-round shadow-1"
-      style="background-color: #facc15"
-    ></div>
-    <span>Planeada</span>
-  </div>
-  <div class="flex align-items-center gap-2">
-    <div
-      class="w-1rem h-1rem border-round shadow-1"
-      style="background-color: #ef4444"
-    ></div>
-    <span>Cancelada</span>
-  </div>
-  <div class="flex align-items-center gap-2">
-    <div
-      class="w-1rem h-1rem border-round shadow-1"
-      style="background-color: #b1b1b1ff"
-    ></div>
-    <span>Finalizada</span>
-  </div>
-</div>
 </div>
 
 <p-dialog
-  [header]="'Clases del ' + selectedDate()"
+  header="Clase"
   [visible]="visibleDialog()"
   (visibleChange)="visibleDialog.set($event)"
   [modal]="true"
@@ -47,95 +47,88 @@
   [draggable]="false"
   [resizable]="false"
   [dismissableMask]="true"
+  [pt]="{
+    header: {
+      class: 'pb-2'
+    }
+  }"
 >
-  <div class="flex flex-column gap-3 mt-2">
-    @for (item of selectedClasses(); track item.agendaId) {
+  <div class="flex flex-column gap-3">
+    @for (item of selectedClass(); track item.agendaId) {
     <div
-      class="p-3 border-round-xl border-1"
+      class="-mx-2 p-3 border-3 border-round-lg flex flex-column gap-2 text-600"
       [ngClass]="{
-        'bg-green-50 border-green-100': item.status === 'active',
-        'bg-yellow-50 border-yellow-100': item.status === 'planned',
-        'bg-red-50 border-red-100': item.status === 'canceled'
-      }"
+            'border-green-300': item.status === 'active',
+            'border-yellow-300': item.status === 'planned',
+            'border-red-300': item.status === 'canceled',
+            'border-gray-300': item.status === 'finished'
+          }"
     >
-      <div class="flex align-items-center justify-content-between mb-2">
-        <span
-          class="font-bold text-lg"
-          [ngClass]="{
-            'text-green-700': item.status === 'active',
-            'text-yellow-700': item.status === 'planned',
-            'text-red-700': item.status === 'canceled'
-          }"
-        >
-          {{ item.lessonName }}
+      <!-- Fecha -->
+      <div class="flex flex-row gap-2 mt-2">
+        <span class="text-lg font-bold uppercase">
+          <i class="pi pi-calendar"></i>
+          Fecha:
         </span>
-        <span
-          class="text-white text-xs font-bold px-2 py-1 border-round-sm"
-          [ngClass]="{
-            'bg-green-500': item.status === 'active',
-            'bg-yellow-500': item.status === 'planned',
-            'bg-red-500': item.status === 'canceled',
-            'bg-gray-500': item.status === 'finished'
-          }"
-        >
+        <span class="font-bold">
+          {{ selectedDate() }}
+        </span>
+      </div>
+
+      <!-- Status -->
+      <div class="flex flex-row gap-2 mt-2">
+        <span class="text-lg font-bold uppercase">
+          <i class="pi pi-circle"></i>
+          Status:
+        </span>
+        <span class="font-bold">
+          {{getStatusLabel(item.status)}}
+        </span>
+      </div>
+
+      <!-- Hora -->
+      <div class="flex flex-row gap-2 mt-2">
+        <span class="text-lg font-bold uppercase">
+          <i class="pi pi-clock"></i>
+          Hora:
+        </span>
+        <span class="font-bold">
           {{ item.startHour }} - {{ item.endHour }}
         </span>
       </div>
+    </div>
 
-      <div
-        class="flex align-items-center gap-2 text-sm mb-3"
-        [ngClass]="{
-          'text-green-600': item.status === 'active',
-          'text-yellow-600': item.status === 'planned',
-          'text-red-600': item.status === 'canceled'
-        }"
-      >
+    <!-- Lista de Alumnos -->
+    <div class="flex flex-column gap-2 pt-2">
+      <span class="text-lg font-bold uppercase">
         <i class="pi pi-users"></i>
-        <span>{{ item.members.size }} Alumnos Inscritos</span>
-      </div>
-
-      <!-- Menu de Estado con SplitButton -->
-      <div class="flex flex-column gap-2 mb-3">
-        <span class="text-xs font-bold uppercase text-500">Estado de la Sesión</span>
-        <p-splitbutton
-          [label]="getStatusLabel(item.status)"
-          [icon]="getStatusIcon(item.status)"
-          [model]="getStatusMenuItems(item)"
-          severity="secondary"
-          size="small"
-          styleClass="w-full"
-          class="w-full"
-          [disabled]="item.status === 'finished'"
-        ></p-splitbutton>
-      </div>
-
-      <!-- Lista de Alumnos -->
-      <div class="flex flex-column gap-2 mt-2">
-        <span class="text-xs font-bold uppercase text-500">Alumnos Inscritos</span>
-        <div class="flex flex-wrap gap-2">
-          @for (user of getMembers(item.members); track user.id) {
-          <div
-            class="flex align-items-center gap-2 px-2 py-1 border-round-lg border-1"
-            [ngClass]="{
+        {{ item.members.size }}
+        Alumnos
+        Inscritos
+      </span>
+      <div class="flex flex-wrap gap-2">
+        @for (user of getMembers(item.members); track user.id) {
+        <div
+          class="flex align-items-center gap-2 px-2 py-1 border-round-lg border-1"
+          [ngClass]="{
                 'bg-green-100 border-green-200 text-green-900': item.status === 'active',
                 'bg-yellow-100 border-yellow-200 text-yellow-900': item.status === 'planned',
                 'bg-red-100 border-red-200 text-red-900': item.status === 'canceled',
                 'bg-gray-100 border-gray-200 text-gray-900': item.status === 'finished'
               }"
-            >
-              <div
-                class="w-1rem h-1rem border-circle flex align-items-center justify-content-center font-bold text-xs"
-                [style.backgroundColor]="user.bgColor"
-                [style.color]="user.color"
-              >
-                {{ user.capitalLetter }}
-              </div>
-              <span class="text-xs font-semibold">{{ user.name }}</span>
-              </div>
-              } @empty {
-              <span class="text-xs text-400 italic">No hay alumnos inscritos</span>
-              }
+        >
+          <div
+            class="w-1rem h-1rem border-circle flex align-items-center justify-content-center font-bold text-xs"
+            [style.backgroundColor]="user.bgColor"
+            [style.color]="user.color"
+          >
+            {{ user.capitalLetter }}
+          </div>
+          <span class="text-xs font-semibold">{{ user.name }}</span>
         </div>
+        } @empty {
+        <span class="text-xs text-400 italic">No hay alumnos inscritos</span>
+        }
       </div>
     </div>
     } @empty {
@@ -146,7 +139,198 @@
   </div>
 
   <ng-template pTemplate="footer">
-    <div class="flex justify-content-end">
+    <div class="flex justify-content-end gap-2">
+      <p-button
+        label="Editar"
+        variant="outlined"
+        severity="warn"
+        (click)="visibleDialog.set(false); visibleEditDialog.set(true)"
+      />
+      <p-button
+        label="Cerrar"
+        variant="outlined"
+        severity="secondary"
+        (click)="visibleDialog.set(false)"
+      />
+    </div>
+  </ng-template>
+</p-dialog>
+
+
+<p-dialog
+  header="Clase"
+  [visible]="visibleEditDialog()"
+  (visibleChange)="visibleEditDialog.set($event)"
+  [modal]="true"
+  [style]="{ width: '90vw', maxWidth: '400px' }"
+  [draggable]="false"
+  [resizable]="false"
+  [dismissableMask]="true"
+  [pt]="{
+    header: {
+      class: 'pb-2'
+    }
+  }"
+>
+  <div class="flex flex-column gap-3">
+    @for (item of selectedClass(); track item.agendaId) {
+    <div
+      class="mb-2 -mx-2 p-3 border-3 border-round-lg flex flex-column gap-2 text-600"
+      [ngClass]="{
+            'border-green-300': item.status === 'active',
+            'border-yellow-300': item.status === 'planned',
+            'border-red-300': item.status === 'canceled',
+            'border-gray-300': item.status === 'finished'
+          }"
+    >
+      <!-- Fecha -->
+      <div class="flex flex-row gap-2 mt-2">
+        <span class="text-lg font-bold uppercase">
+          <i class="pi pi-calendar"></i>
+          Fecha:
+        </span>
+        <span class="font-bold">
+          {{ selectedDate() }}
+        </span>
+      </div>
+
+      <!-- Status -->
+      <div class="flex flex-row gap-2 mt-2">
+        <span class="text-lg font-bold uppercase">
+          <i class="pi pi-circle"></i>
+          Status:
+        </span>
+        <span class="font-bold">
+          {{getStatusLabel(item.status)}}
+        </span>
+      </div>
+
+      <!-- Hora -->
+      <div class="flex flex-row gap-2 mt-2">
+        <span class="text-lg font-bold uppercase">
+          <i class="pi pi-clock"></i>
+          Hora:
+        </span>
+        <span class="font-bold">
+          {{ item.startHour }} - {{ item.endHour }}
+        </span>
+      </div>
+    </div>
+
+
+    <!-- Menu de Estado con SplitButton -->
+    <div class="flex flex-column gap-2 mb-3">
+      <span class="text-xs font-bold uppercase">Estado de la
+        Sesión</span>
+      <p-splitbutton
+        [label]="getStatusLabel(item.status)"
+        [icon]="getStatusIcon(item.status)"
+        [model]="getStatusMenuItems(item)"
+        severity="secondary"
+        size="small"
+        styleClass="w-full"
+        class="w-full"
+        [disabled]="item.status === 'finished'"
+      ></p-splitbutton>
+    </div>
+
+    <!-- Lista de Alumnos -->
+    <div class="flex flex-column gap-2">
+      <span class="text-lg font-bold uppercase">
+        <i class="pi pi-users"></i>
+        {{ item.members.size }}
+        Alumnos
+        Inscritos
+      </span>
+      <div class="flex flex-wrap gap-2">
+
+        <p-listbox
+          [options]="getMembers(item.members)"
+          optionLabel="name"
+          scrollHeight="250px"
+          class="w-full border-none"
+          styleClass="border-none p-0"
+          [listStyle]="{ 'padding': '0' }"
+        >
+          <ng-template
+            let-user
+            pTemplate="item"
+          >
+            <div class="flex align-items-center gap-1 -mx-2 -my-1">
+              <div
+                class="w-2rem h-2rem border-circle flex align-items-center justify-content-center font-bold text-xs"
+                [style]="{ backgroundColor: user.bgColor, color: user.color }"
+              >
+                {{ user.capitalLetter }}
+              </div>
+              <div class="flex flex-column">
+                <span class="font-medium text-sm">{{ user.name }}</span>
+                <span class="text-xs text-500">{{ user.email }}</span>
+              </div>
+            </div>
+          </ng-template>
+        </p-listbox>
+
+      </div>
+    </div>
+
+    <!-- Lista de Invitados -->
+    <div class="flex flex-column gap-2">
+      <span class="text-lg font-bold uppercase">
+        <i class="pi pi-users"></i>
+        {{ item.members.size }}
+        Alumnos
+        Invitados
+      </span>
+      <div class="flex flex-wrap gap-2">
+
+        <p-listbox
+          [options]="getMembers(item.members)"
+          [checkbox]="true"
+          [multiple]="true"
+          [showToggleAll]="false"
+          (onChange)="onMembersChange($event)"
+          optionLabel="name"
+          scrollHeight="250px"
+          class="w-full border-none p-0"
+          [listStyle]="{ 'padding': '0' }"
+        >
+          <ng-template
+            let-user
+            pTemplate="item"
+          >
+            <div class="flex align-items-center gap-1 -my-1">
+
+              <div
+                class="w-2rem h-2rem border-circle flex align-items-center justify-content-center font-bold text-xs"
+                [style]="{ backgroundColor: user.bgColor, color: user.color }"
+              >
+                {{ user.capitalLetter }}
+              </div>
+              <div class="flex flex-column">
+                <span class="font-medium text-sm">{{ user.name }}</span>
+                <span class="text-xs text-500">{{ user.email }}</span>
+              </div>
+            </div>
+          </ng-template>
+        </p-listbox>
+
+      </div>
+    </div>
+    } @empty {
+    <div class="text-center p-4 text-600">
+      No hay clases programadas para este día.
+    </div>
+    }
+  </div>
+
+  <ng-template pTemplate="footer">
+    <div class="flex justify-content-end gap-2">
+      <p-button
+        label="Guardar"
+        severity="success"
+        (click)="updateLessonStatus()"
+      />
       <p-button
         label="Cerrar"
         variant="outlined"
