--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -39,19 +39,19 @@
     </small>
   </div>
 <p-button label="Iniciar sesión" type="submit" [loading]="loginForm.pending"
-  [style]="{ width: '100%', marginTop: '1rem' }"></p-button>
+  styleClass="w-full mt-2"></p-button>
 
-<div class="flex gap-2 mt-2">
-  <p-button label="Mock User" icon="pi pi-user" severity="secondary" variant="outlined" class="flex-grow-1"
+<div class="mt-2">
+  <p-button label="Alumno demo" icon="pi pi-user" severity="secondary" variant="outlined" styleClass="w-full"
     (click)="mockLogin('user')"></p-button>
-    <p-button
+    <!-- <p-button
       label="Mock Admin"
       icon="pi pi-shield"
       severity="secondary"
       variant="outlined"
       class="flex-grow-1"
       (click)="mockLogin('admin')"
-    ></p-button>
+    ></p-button> -->
   </div>
 <div class="text-center mt-2">
   <span>¿No tienes cuenta? </span>
