--- a/src/app/private/admin-users/admin-users.html
+++ b/src/app/private/admin-users/admin-users.html
@@ -6,7 +6,7 @@
     class="header-section flex flex-column md:flex-row justify-content-between align-items-start md:align-items-center m-3"
   >
     <h1 class="text-3xl md:text-4xl font-bold m-0 text-900">Gestión de
-      Usuarios</h1>
+      Usuarios | {{users().length}}</h1>
     <p class="text-600 m-0 mt-2">Administra los usuarios de la plataforma y su
       estado de verificación.</p>
   </div>
