list page for admins

--- a/src/app/private/admin-users/admin-users.html
+++ b/src/app/private/admin-users/admin-users.html
@@ -2,8 +2,7 @@
   <div
     class="header-section m-3">
     <h1 class="text-3xl md:text-4xl font-bold m-0 text-900">Gestión de
-      Usuarios <small>| {{alumnos().length}} Alumnos</small>
-      <h1>
+      Usuarios <small>| {{alumnos().length}} Alumnos</small></h1>
     <p class="text-600 m-0 mt-2">Administra los usuarios de la plataforma y su
       estado de verificación.</p>
   </div>
