login link on register

--- a/src/app/public/layout/layout.component.html
+++ b/src/app/public/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center align-items-center h-screen">
-  <p-card>
+  <p-card styleClass="w-22rem">
     <router-outlet></router-outlet>
   </p-card>
 </div>
