--- a/src/app/public/register/register.component.html
+++ b/src/app/public/register/register.component.html
@@ -82,4 +82,9 @@
     [loading]="registerForm.pending"
     [style]="{ width: '100%', marginTop: '1rem' }"
   ></p-button>
+
+  <div class="text-center mt-2">
+    <span>¿Ya tienes cuenta? </span>
+    <a routerLink="/login" class="font-bold cursor-pointer text-primary no-underline">Entra aquí</a>
+  </div>
 </form>
