toast al guarda usuario

--- a/src/app/private/user/user.component.html
+++ b/src/app/private/user/user.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="flex flex-column gap-6 mt-6 px-4 md:px-8 max-w-30rem mx-auto">
 
   <div class="flex flex-column align-items-center gap-2">
