recupera contraseña estilo

--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -91,11 +91,11 @@
       class="font-bold cursor-pointer text-primary no-underline"
     >Regístrate aquí</a>
   </div>
-  <div class="text-center mt-2">
+  <div class="text-center mt-2 text-sm">
     <span>¿Olvidaste tu contraseña? </span>
     <a
       routerLink="/forgot-password"
-      class="font-bold cursor-pointer text-primary no-underline"
-    >Recupera tu contraseña</a>
+      class="font-bold cursor-pointer text-ternary no-underline"
+    >Recupérala aquí</a>
   </div>
 </form>
