--- a/src/app/private/layout/layout.component.html
+++ b/src/app/private/layout/layout.component.html
@@ -37,7 +37,9 @@
   </p-tablist>
 </p-tabs>
 
-<router-outlet></router-outlet>
+<div id="page">
+  <router-outlet></router-outlet>
+</div>
 
 <p-dialog [visible]="showAbout()" (visibleChange)="showAbout.set($event)" [modal]="true" [draggable]="false"
   [resizable]="false" [dismissableMask]="true" [closable]="true" [closeOnEscape]="true" [style]="{ width: '20rem' }"
